# image-genetic-algorithm

./: CMakeLists.txt
src/: main.c
src/genetic/: genetic.c  genetic.h
src/image/: genalg_image.c  genalg_image.h
src/math/: math.c  math.h
